Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
             <div class="project row">
                 <div class="col-md-6">
                     <div class="project-item tools">
-                        <img src="https://i.ibb.co/BCvQSYL/create-Single-Connection.png" alt="mappifysql"
-                            class="img-fluid rounded w-100">
+                        <img src="/img/mappifysql.jpg" alt="mappifysql"
+                            class="img-fluid rounded w-100" style="height: 300px; width: 100%; object-fit: cover;">
                         <h1 class="img-text2 mt-3">MappifySQL</h1>
                         <p>
                             MappifySQL is a lightweight, easy-to-use Object-Relational Mapping (ORM) library for MySQL
