Update web developer introduction in index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-md-7 col-lg-7 pt-4 pt-lg-0">
                     <h2>Hi there, I'm <b class="img-text2">Walid Adebayo</b></h2>
                     <p>
-                        I am a passionate full-stack web developer with two years of experience, specializing in
+                        I am a passionate full-stack web developer, specializing in
                         creating seamless web experiences that integrate front-end polished with robust back-end
                         functionality. Committed to delivering high-quality software solutions and staying updated on
                         emerging technologies in the field.
