Enhance navbar functionality and styling; update project descriptions and remove unused code

--- a/index.html
+++ b/index.html
@@ -81,37 +81,37 @@
                     <div class="collapse navbar-collapse justify-content-end m-4" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item ">
-                                <a href="#home" class="nav-link nav-icon img-text active" aria-current="page">
+                                <a href="#home" class="nav-link nav-icon active" aria-current="page">
                                     <i class="bi bi-house-door-fill "></i>
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#about" id="about-nav" class="nav-link nav-icon img-text" aria-current="page">
+                                <a href="#about" id="about-nav" class="nav-link nav-icon" aria-current="page">
                                     <i class="bi bi-person-fill"></i>
                                     About
                                 </a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#services" class="nav-link nav-icon img-text" aria-current="page">
+                                <a href="#services" class="nav-link nav-icon" aria-current="page">
                                     <i class="bi bi-tools "></i>
                                     Services
                                 </a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#resume" class="nav-link nav-icon img-text" aria-current="page">
+                                <a href="#resume" class="nav-link nav-icon" aria-current="page">
                                     <i class="bi bi-file-earmark-fill "></i>
                                     Resume
                                 </a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#projects" class="nav-link nav-icon img-text" aria-current="page">
+                                <a href="#projects" class="nav-link nav-icon" aria-current="page">
                                     <i class="bi bi-lightbulb-fill "></i>
                                     Projects
                                 </a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#contact" class="nav-link nav-icon img-text" aria-current="page">
+                                <a href="#contact" class="nav-link nav-icon" aria-current="page">
                                     <i class="bi bi-envelope-check-fill "></i>
                                     Contact
                                 </a>
@@ -317,7 +317,7 @@
                     <div class="col-md-3 text-center skills">
                         <img src="https://i.ibb.co/d237tGm/Google-cloud.png" alt="Google Cloud Console Icon"
                             class="img-fluid mb-2">
-                        <p id="gcp">Google Cloud Console</p>
+                        <p id="gcp">Google Cloud Platform</p>
                     </div>
                     <!-- Version Control -->
                     <div class="col-md-3 text-center skills">
@@ -663,9 +663,39 @@
                 impactful attempt that I have passionately worked on, utilizing my skills and expertise.
             </p>
             <div class="project row">
-                <!-- <div class="col-md-6">
+                <div class="col-md-6">
                     <div class="project-item tools">
-                        <img src="https://i.ibb.co/wSTyX7g/preidtif-Finance.png" alt="preidtif-Finance"
+                        <img src="https://i.ibb.co/723TvDn/Viz-Xpress.png" alt="VizXpress"
+                            class="img-fluid rounded w-100">
+                        <h1 class="img-text2 mt-3">VizXpress</h1>
+                        <p>
+                            VizXpress is a powerful and user-friendly web application designed to simplify your image,
+                            gif
+                            and video processing needs. Built with <strong>Next.js</strong>, <strong>React.js</strong>,
+                            <strong>TypeScript</strong>, <strong>Tailwind CSS</strong>, and <strong>Flowbite
+                                React</strong>, it offers a suite of tools to
+                            help you achieve your goals effortlessly. The background remover API is developed using
+                            <strong>Python</strong>, <strong>Flask</strong>, and <strong>RemBG</strong> package. It's
+                            under development and more features will be added soon.
+                        </p>
+                        <div class="d-flex justify-content-between">
+                            <button type="button" class="btn text-white">
+                                <a href="https://vizxpress.vercel.app/bgremover" data-glightbox="type: external"
+                                    title="VizXpress" class="project-lightbox text-white">
+                                    Quick View <i class="bi bi-eye"></i>
+                                </a>
+                            </button>
+                            <button type="button" class="btn">
+                                <a href="https://vizxpress.vercel.app/bgremover" class="text-white" target="_blank">
+                                    Visit <i class="bi bi-box-arrow-up-right"></i></a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="project-item tools">
+                        <img src="https://i.ibb.co/wSTyX7g/preidtif-Finance.png" alt="predictif-Finance"
                             class="img-fluid rounded w-100" style="height: 300px; width: 100%; object-fit: cover;">
                         <h1 class="img-text2 mt-3">Predictif Finance</h1>
 
@@ -677,7 +707,8 @@
                                 models</strong> to analyze vast streams of <strong>news articles</strong>,
                             <strong>alternative data</strong>, and <strong>traditional financial data</strong>,
                             providing actionable insights through an intuitive and responsive <strong>user
-                                interface</strong>. This project was developed as a collaborative team effort.
+                                interface</strong>. This project was developed as a collaborative team effort and it's
+                            still under development.
                         </p>
                         <div class="d-flex justify-content-between">
                             <button type="button" class="btn text-white">
@@ -692,7 +723,7 @@
                             </button>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="col-md-6">
                     <div class="project-item tools">
@@ -844,38 +875,6 @@
 
                 <div class="col-md-6">
                     <div class="project-item tools">
-                        <img src="https://i.ibb.co/s5k08TT/bgremoval.png" alt="bgremoval"
-                            class="img-fluid rounded w-100">
-                        <h1 class="img-text2 mt-3">BG Removal</h1>
-                        <p>
-                            BG Removal is a background image remover built with HTML, CSS, Bootstrap,
-                            JavaScript,
-                            Jquery, NodeJS, ExpressJS, and EJS.
-                            This website allow users upload images from their device and remove background from
-                            images
-                            and download the image in PNG format. This was a team project and I was responsible
-                            for the
-                            back-end of the website. I used NodeJS, ExpressJS, and EJS to build the back-end of
-                            the
-                            website. I also used RemoveBG API to remove background from images.
-                        </p>
-                        <div class="d-flex justify-content-between">
-                            <button type="button" class="btn text-white">
-                                <a href="https://bgremover.netlify.app" data-glightbox="type: external"
-                                    title="BGRemoval" class="project-lightbox text-white">
-                                    Quick View <i class="bi bi-eye"></i>
-                                </a>
-                            </button>
-                            <button type="button" class="btn">
-                                <a href="https://bgremover.netlify.app" class="text-white" target="_blank">
-                                    Visit <i class="bi bi-box-arrow-up-right"></i></a>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="project-item tools">
                         <img src="https://i.ibb.co/BBZZ8yL/artvibrance.png" alt="artvibrance"
                             class="img-fluid rounded w-100">
                         <h1 class="img-text2 mt-3">ArtVibrance</h1>
@@ -900,7 +899,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="project-item tools">
                         <img src="https://i.ibb.co/bWXVGf3/adealcalculator.png" alt="adealcalculator"
                             class="img-fluid rounded w-100">
@@ -926,7 +925,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="col-md-6">
                     <div class="project-item videos">
