Add location information to index.html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
                         <img src="https://i.ibb.co/4P0mR2H/phone.png" alt="phone" class="img-fluid" width="50px">
                         <b>Phone:</b> <a href="tel:+447903431113" class="img-text2">+447903431113</a>
                     </p>
+                    <p>
+                        <img src="https://i.ibb.co/fD1zrNZ/location.png" alt="location" class="img-fluid" width="40px">
+                        <b>Location:</b> Sheffield, United Kingdom
+                    </p>
                 </div>
             </div>
             <div class="my-5">
