Update project descriptions in index.html for clarity and improve formatting

--- a/index.html
+++ b/index.html
@@ -699,7 +699,8 @@
                             player that supports video, audio, and streaming playback. Perfect for building modern media
                             applications. It is built with <strong>React.js</strong>, <strong>HTML</strong>,
                             <strong>CSS</strong>, <strong>Tailwind CSS</strong>, and <strong>JavaScript</strong>.
-                            This project was built while developing <strong>VizXpress</strong>. It is a standalone project that can be
+                            This project was built while developing <strong>VizXpress</strong>. It is a standalone
+                            project that can be
                             integrated into any React application.
                         </p>
                         <div class="d-flex justify-content-between">
@@ -710,7 +711,8 @@
                                 </a>
                             </button>
                             <button type="button" class="btn">
-                                <a href="https://react-video-audio-player.vercel.app" class="text-white" target="_blank">
+                                <a href="https://react-video-audio-player.vercel.app" class="text-white"
+                                    target="_blank">
                                     Visit <i class="bi bi-box-arrow-up-right"></i></a>
                             </button>
                         </div>
@@ -842,15 +844,14 @@
                         <img src="https://i.ibb.co/ZKLwYXs/alusoftmall.png" alt="e-commerce-alusoftmall"
                             class="img-fluid rounded w-100">
                         <h1 class="img-text2 mt-3">Alusoft Mall</h1>
-                        Alusoft Mall is an e-commerce website built with HTML, CSS, Bootstrap, JavaScript,
-                        Jquery,
-                        Ajax,
-                        NodeJS, ExpressJS, MySQL and EJS.
-                        This website enable users to register, login, view products details, search for
-                        products,
-                        view product by category, add product to cart, add to wishlist, checkout products and
-                        many
-                        more.
+                        Alusoft Mall is a comprehensive e-commerce platform that allows users to
+                        register, log in, view product details, search for products, browse by category, add items to
+                        the cart and wishlist, complete the checkout process, receive order confirmation emails and
+                        so much more.
+                        It was built with <strong>HTML</strong>, <strong>CSS</strong>, <strong>Bootstrap</strong>,
+                        <strong>JavaScript</strong>,
+                        <strong>jQuery</strong>, <strong>Ajax</strong>, <strong>NodeJS</strong>,
+                        <strong>ExpressJS</strong>, <strong>MySQL</strong>, and <strong>EJS</strong>.
                         </p>
                         <div class="d-flex justify-content-between">
                             <button type="button" class="btn text-white">
