Update social media links in footer for accuracy

--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
           <b>Social: </b>
           <span class="social-links-footer">
             <a
-              href="https://www.linkedin.com/in/walid-adebayo-129466245/"
+              href="https://www.linkedin.com/in/walidadebayo/"
               target="_blank"
               class="text-primary fa-2x me-2"
               ><i class="bi bi-linkedin"></i
@@ -1606,13 +1606,13 @@
               ><i class="bi bi-github"></i
             ></a>
             <a
-              href="https://www.facebook.com/adebayo.walid"
+              href="https://www.facebook.com/walidadebayo0/"
               target="_blank"
               class="text-primary fa-2x me-2"
               ><i class="bi bi-facebook"></i
             ></a>
             <a
-              href="https://wa.link/hs1n5k"
+              href="https://wa.link/1xpots"
               target="_blank"
               class="fa-2x me-2 text-success"
               ><i class="bi bi-whatsapp"></i
