Refactor code structure for improved readability and maintainability, added new projects

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       property="og:description"
       content="Full-stack web developer with over 3 years of experience crafting interactive, user-friendly applications. Proficient in front-end technologies (HTML, CSS, JavaScript, React.js, Next.js) and back-end development (Node.js, Express.js, TypeScript, MySQL, MongoDB). Skilled in responsive design, API integration, and database optimization. Passionate about creating efficient, scalable web solutions that drive business growth. Committed to continuous learning and staying current with emerging technologies."
     />
-    <meta property="og:image" content="/img/officepic.jpg" />
+    <meta property="og:image" content="/img/walid-banner.png" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1594" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpg" />
 
     <!-- Twitter Meta Tags -->
@@ -48,14 +48,14 @@
       name="twitter:description"
       content="Full-stack web developer with over 3 years of experience crafting interactive, user-friendly applications. Proficient in front-end technologies (HTML, CSS, JavaScript, React.js, Next.js) and back-end development (Node.js, Express.js, TypeScript, MySQL, MongoDB). Skilled in responsive design, API integration, and database optimization. Passionate about creating efficient, scalable web solutions that drive business growth. Committed to continuous learning and staying current with emerging technologies."
     />
-    <meta name="twitter:image" content="/img/officepic.jpg" />
+    <meta name="twitter:image" content="/img/walid-banner.png" />
     <meta
       name="keywords"
       content="Full-Stack web developer, Web designer, Web developer, Video Animation creator, Frontend developer, Backend developer, Walid, Walid Adebayo, Adebayo, Adeal, Opeyemi, Walid Opeyemi Adebayo, JavaScript developer, React developer, Node.js developer, Express.js developer, MongoDB developer, MySQL developer, HTML5, CSS3, Bootstrap, Tailwind CSS, jQuery, Ajax, API integration, RESTful services, Git, GitHub, Version control, Responsive design, Cross-browser compatibility, Web performance optimization, SEO, Cloud deployment, AWS, Heroku, Vercel, Agile development, Scrum, Web application development, Single-page applications, Progressive web apps, E-commerce development, Portfolio website, Personal website, Software engineer, Programmer, Coding, Web technologies, Full-stack development, Front-end development, Back-end development, "
     />
     <link
       rel="shortcut icon"
-      href="https://i.ibb.co/qrPrfqj/myfavicon.png"
+      href="/img/walid-logo-icon2.png"
       type="image/x-icon"
     />
     <script
@@ -114,8 +114,8 @@
             class="d-flex navbar-brand align-items-center justify-content-between"
           >
             <a href="/" class="logo d-flex align-items-center">
-              <img src="https://i.ibb.co/qrPrfqj/myfavicon.png" alt="mypic" />
-              <span class="img-text">Adeal</span>
+              <img src="/img/walid-logo-icon2.png" alt="mypic" loading="lazy" />
+              <span class="img-text">W.A</span>
             </a>
           </div>
           <button
@@ -213,7 +213,7 @@
             <p id="intro" class="text-light" id="intro">
               As a proficient full-stack web developer, I possess in-depth
               knowledge of how web applications work and have expertise in
-              creating seamless user interfaces.
+              creating seamless user interfaces.
             </p>
             <div class="social-links">
               <a
@@ -261,7 +261,12 @@
         <div class="row mt-3">
           <div class="col-md-5">
             <div class="hex">
-              <img src="/img/walid.png" alt="mypic " class="img-fluid" />
+              <img
+                src="/img/walid.webp"
+                alt="mypic "
+                class="img-fluid"
+                loading="lazy"
+              />
               <!-- <img src="https://i.ibb.co/4scCPgj/officepics.jpg" alt="mypic " class="img-fluid"> -->
             </div>
           </div>
@@ -293,6 +298,7 @@
                 alt="boy"
                 class="img-fluid"
                 width="50px"
+                loading="lazy"
               />
               <b>Name:</b> Walid Adebayo
             </p>
@@ -302,6 +308,7 @@
                 alt="mail"
                 class="img-fluid"
                 width="50px"
+                loading="lazy"
               />
               <b>Email:</b>
               <a href="mailto:adebayowalid@gmail.com" class="img-text2"
@@ -314,6 +321,7 @@
                 alt="phone"
                 class="img-fluid"
                 width="50px"
+                loading="lazy"
               />
               <b>Phone:</b>
               <a href="tel:+447903431113" class="img-text2">+447903431113</a>
@@ -324,6 +332,7 @@
                 alt="location"
                 class="img-fluid"
                 width="40px"
+                loading="lazy"
               />
               <b>Location:</b> Sheffield, United Kingdom
             </p>
@@ -338,6 +347,7 @@
                 src="https://i.ibb.co/M5btHh9/html.png"
                 alt="HTML Icon"
                 class="img-fluid w-2 mb-2"
+                loading="lazy"
               />
               <p id="html">HTML</p>
             </div>
@@ -347,6 +357,7 @@
                 src="https://i.ibb.co/WGfFpVS/css.png"
                 alt="CSS Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="css">CSS</p>
             </div>
@@ -356,6 +367,7 @@
                 src="https://i.ibb.co/CzfMVG1/javascript.png"
                 alt="JavaScript Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="js">JavaScript</p>
             </div>
@@ -365,6 +377,7 @@
                 src="https://i.ibb.co/m4sMp8p/typescript.png"
                 alt="Typescript Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="ts">Typescript</p>
             </div>
@@ -374,6 +387,7 @@
                 src="https://i.ibb.co/bNBGFB7/nodejs.png"
                 alt="Node.js Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="node">Node.js</p>
             </div>
@@ -383,6 +397,7 @@
                 src="https://i.ibb.co/njYk5Lk/express.png"
                 alt="Express.js Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="ex">Express.js</p>
             </div>
@@ -392,6 +407,7 @@
                 src="https://i.ibb.co/PhWdjmZ/react.png"
                 alt="React Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="react">React</p>
             </div>
@@ -401,6 +417,7 @@
                 src="https://i.ibb.co/TKBQrYm/nextjs.png"
                 alt="Next.js Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="next">Next.js</p>
             </div>
@@ -410,6 +427,7 @@
                 src="https://i.ibb.co/rw33nqB/mysql.png"
                 alt="MySQL Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="mysql">MySQL</p>
             </div>
@@ -419,6 +437,7 @@
                 src="https://i.ibb.co/Sm5xFf5/mongodb.png"
                 alt="MongoDB Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="mongo">MongoDB</p>
             </div>
@@ -428,6 +447,7 @@
                 src="https://i.ibb.co/tsk04HK/tailwind.png"
                 alt="Tailwind CSS Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="tw">Tailwind CSS</p>
             </div>
@@ -437,6 +457,7 @@
                 src="https://i.ibb.co/cWsTdzw/cplusplus.png"
                 alt="C++ Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="cpp">C++</p>
             </div>
@@ -448,6 +469,7 @@
                 src="https://i.ibb.co/9yc4WQH/redux.png"
                 alt="Redux Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="redux">Redux</p>
             </div>
@@ -457,6 +479,7 @@
                 src="https://i.ibb.co/0Vs5tGJ/ajax.png"
                 alt="Ajax Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="ajax">Ajax</p>
             </div>
@@ -466,6 +489,7 @@
                 src="https://i.ibb.co/ngSnR2S/jquery.png"
                 alt="jQuery Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="jq">jQuery</p>
             </div>
@@ -475,6 +499,7 @@
                 src="https://i.ibb.co/QPL3BZ1/bootstrap.png"
                 alt="Bootstrap Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="bs">Bootstrap</p>
             </div>
@@ -484,6 +509,7 @@
                 src="https://i.ibb.co/z7d2MJJ/ejs.png"
                 alt="EJS Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="ejs">Embedded JavaScript</p>
             </div>
@@ -493,6 +519,7 @@
                 src="https://i.ibb.co/yNs3zC3/passportjs.png"
                 alt="PassportJS Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="passport">PassportJS</p>
             </div>
@@ -508,6 +535,7 @@
                 src="https://i.ibb.co/3WP4T5d/git.png"
                 alt="Version Control Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="vc">Version Control</p>
             </div>
@@ -517,6 +545,7 @@
                 src="https://i.ibb.co/khQ561T/amazonS3.png"
                 alt="AWS S3 Bucket Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="aws">AWS S3 Bucket</p>
             </div>
@@ -526,6 +555,7 @@
                 src="https://i.ibb.co/d237tGm/Google-cloud.png"
                 alt="Google Cloud Console Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="gcp">Google Cloud Platform</p>
             </div>
@@ -535,6 +565,7 @@
                 src="https://i.ibb.co/dbggjRm/heroku.png"
                 alt="Heroku Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="heroku">Heroku</p>
             </div>
@@ -544,6 +575,7 @@
                 src="https://i.ibb.co/tXnYvwK/seo.png"
                 alt="SEO Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="seo">Google Search Console</p>
             </div>
@@ -553,6 +585,7 @@
                 src="https://i.ibb.co/XW9B9Yk/cloudflare.png"
                 alt="Cloudflare Icon"
                 class="img-fluid mb-2"
+                loading="lazy"
               />
               <p id="cf">Cloudflare</p>
             </div>
@@ -989,6 +1022,7 @@
                 src="https://i.ibb.co/FJYsyQ3/vizxpress.png"
                 alt="VizXpress"
                 class="img-fluid rounded w-100"
+                loading="lazy"
               />
               <h1 class="img-text2 mt-3">VizXpress</h1>
               <p>
@@ -1029,9 +1063,94 @@
           <div class="col-md-6">
             <div class="project-item tools">
               <img
+                src="https://i.ibb.co/Xk8k41Cn/drbike.png"
+                alt="DrBike"
+                class="img-fluid rounded w-100"
+                loading="lazy"
+              />
+              <h1 class="img-text2 mt-3">DrBike"</h1>
+              <p>
+                A full-stack web application for a local bike repair and e-bike
+                conversion business, "Dr. Bike". The website provides a complete
+                digital solution to showcase services, products, customer
+                reviews, blog, galleries and manage appointments.
+                <strong>React</strong>, <strong>Next.js</strong>,
+                <strong>TypeScript</strong>, <strong>MongoDB</strong>,
+                <strong>Tailwind CSS</strong>,
+              </p>
+
+              <div class="d-flex justify-content-between">
+                <button type="button" class="btn text-white">
+                  <a
+                    href="https://drbike.vercel.app/"
+                    data-glightbox="type: external"
+                    title="DrBike"
+                    class="project-lightbox text-white"
+                  >
+                    Quick View <i class="bi bi-eye"></i>
+                  </a>
+                </button>
+                <button type="button" class="btn">
+                  <a
+                    href="https://drbike.vercel.app/"
+                    class="text-white"
+                    target="_blank"
+                  >
+                    Visit <i class="bi bi-box-arrow-up-right"></i>
+                  </a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="project-item tools">
+              <img
+                src="https://i.ibb.co/HL7WLvN8/estateluxe.png"
+                alt="EstateLuxe"
+                class="img-fluid rounded w-100"
+                loading="lazy"
+              />
+              <h1 class="img-text2 mt-3">EstateLuxe</h1>
+              <p>
+                A responsive and AI-enhanced web application that simplifies
+                estate management for users and admins. Built with
+                <strong>React</strong>, <strong>Next.js</strong>,
+                <strong>TypeScript</strong>, <strong>Tailwind CSS</strong>,
+                <strong>KendoReact Free Components</strong> and
+                <strong>Theme Builder</strong>, it offers a user-friendly
+                interface for seamless property management.
+              </p>
+
+              <div class="d-flex justify-content-between">
+                <button type="button" class="btn text-white">
+                  <a
+                    href="https://estateluxe.vercel.app/"
+                    data-glightbox="type: external"
+                    title="EstateLuxe"
+                    class="project-lightbox text-white"
+                  >
+                    Quick View <i class="bi bi-eye"></i>
+                  </a>
+                </button>
+                <button type="button" class="btn">
+                  <a
+                    href="https://estateluxe.vercel.app/"
+                    class="text-white"
+                    target="_blank"
+                  >
+                    Visit <i class="bi bi-box-arrow-up-right"></i>
+                  </a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="project-item tools">
+              <img
                 src="https://i.ibb.co/YBNvY8Tt/nextgencareerstech.png"
                 alt="NextGenCareersTech"
                 class="img-fluid rounded w-100"
+                loading="lazy"
               />
               <h1 class="img-text2 mt-3">NextGenCareersTech</h1>
               <p>
@@ -1072,6 +1191,7 @@
                 src="https://i.ibb.co/Z6s7pLNQ/react-video-audio-player.png"
                 alt="React Video Audio Player"
                 class="img-fluid rounded w-100"
+                loading="lazy"
               />
               <h1 class="img-text2 mt-3">React Video Audio Player</h1>
               <p>
@@ -1116,6 +1236,7 @@
                 alt="predictif-Finance"
                 class="img-fluid rounded w-100"
                 style="height: 300px; width: 100%; object-fit: cover"
+                loading="lazy"
               />
               <h1 class="img-text2 mt-3">Predictif Finance</h1>
 
@@ -1165,6 +1286,7 @@
                 alt="mappifysql"
                 class="img-fluid rounded w-100"
                 style="height: 300px; width: 100%; object-fit: cover"
+                loading="lazy"
               />
               <h1 class="img-text2 mt-3">MappifySQL</h1>
               <p>
@@ -1450,6 +1572,7 @@
         </div>
       </div>
     </section>
+
     <!-- contact -->
     <section id="contact" class="fade-up mt-5 section">
       <div class="container">
@@ -1461,6 +1584,7 @@
               alt=""
               class="img-fluid"
               width="500px"
+              loading="lazy"
             />
             <div class="my-4">
               <img
@@ -1468,6 +1592,7 @@
                 alt="mail"
                 class="img-fluid"
                 width="50px"
+                loading="lazy"
               />
               <b> Email:</b>
               <a href="mailto:adebayowalid@gmail.com">adebayowalid@gmail.com</a>
@@ -1478,6 +1603,7 @@
                 alt="phone"
                 class="img-fluid"
                 width="50px"
+                loading="lazy"
               />
               <b class=""> Phone:</b>
               <a href="tel:+447903491113">+447903491113</a>
@@ -1494,6 +1620,7 @@
                 class="img-fluid"
                 alt="hand-shake"
                 width="150px"
+                loading="lazy"
               />
             </center>
             <form class="needs-validation" novalidate id="form">
